#=====================================================
FIND_PACKAGE(DELTA3D REQUIRED)
INCLUDE_DIRECTORIES(${DELTA3D_INCLUDE_DIR})

FIND_PACKAGE(OSG REQUIRED)
INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})

FIND_PACKAGE(ODE REQUIRED)
INCLUDE_DIRECTORIES(${ODE_INCLUDE_DIR})

FIND_PACKAGE(CPPUNIT REQUIRED)
INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIR})
#=====================================================


ADD_SUBDIRECTORY(testActorLibrary)

